Fixed number misalignment in tag cloud count element

--- a/scss/partials/_tags.scss
+++ b/scss/partials/_tags.scss
@@ -14,6 +14,7 @@
   width: 18px;
   height: 18px;
   text-align: center;
+  letter-spacing: 0;
   @include border-radius(18px);
   margin-left: 0.2em;
   font-weight: normal;
